--- a/index.html
+++ b/index.html
@@ -55,25 +55,25 @@
             <div class="container">
                 <h2 class="title visualli-hidden">Our principles</h2>
                 <ul class="list princ-list">
-                    <li class="set-principle">
+                    <li class="set-principle icon-antenna">
                         <h3 class="principles-item">Strategy</h3>
                         <p class="principles-list">Our goal is to identify the business
                             problem to walk away with the perfect and creative solution.</p>
                     </li>
-                    <li class="set-principle">
+                    <li class="set-principle icon-clock">
                         <h3 class="principles-item">Punctuality</h3>
                         <p class="principles-list">Bring the key message to the brand's audience for the best price
                             within
                             the shortest possible
                             time.</p>
                     </li>
-                    <li class="set-principle">
+                    <li class="set-principle icon-vector">
                         <h3 class="principles-item">Diligence</h3>
                         <p class="principles-list">Research and confirm brands that present the strongest digital growth
                             opportunities and minimize
                             risk.</p>
                     </li>
-                    <li class="set-principle">
+                    <li class="set-principle icon-astronaut">
                         <h3 class="principles-item">Technologies</h3>
                         <p class="principles-list">Design practice focused on digital experiences. We bring forth a deep
                             passion for
@@ -100,33 +100,66 @@
                 <h2 class="team-item">Our Team</h2>
                 <ul class="list team-list">
                     <li class="color-team-item">
-                        <img src="./images/team/img.jpg" alt="mark" width="264">
+                        <img src="./images/team/img.jpg" alt="mark" width="264" />
                         <div class="tem-cards">
                             <h3 class="people-names">Mark Guerrero</h3>
                             <p class="team-position">Product Designer</p>
+                            <ul class="social list">
+                                <li>
+                                    <a href="">
+                                        <svg width="40" height="40">
+                                            <use href="./images/icon/Social-media/symbol-defs2.svg#icon-instagram">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <svg width="40" height="40">
+                                            <use href="./images/icon/Social-media/symbol-defs2.svg#icon-instagram">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="color-team-item">
-                        <img src="./images/team/1.jpg" alt="tom" width="264">
+                        <img src="./images/team/1.jpg" alt="tom" width="264" />
                         <div class="tem-cards">
                             <h3 class="people-names">Tom Ford</h3>
                             <p class="team-position">Frontend Developer</p>
                         </div>
                     </li>
                     <li class="color-team-item">
-                        <img src="./images/team/img(1).jpg" alt="Camila" width="264">
+                        <img src="./images/team/img(1).jpg" alt="Camila" width="264" />
                         <div class="tem-cards">
                             <h3 class="people-names">Camila Garcia</h3>
                             <p class="team-position">Marketing</p>
                         </div>
                     </li>
                     <li class="color-team-item">
-                        <img src="./images/team/img(2).jpg" alt="Deniel" width="264">
+                        <img src="./images/team/img(2).jpg" alt="Deniel" width="264" />
                         <div class="tem-cards">
                             <h3 class="people-names">Daniel Wilson</h3>
                             <p class="team-position">UI Designer</p>
                         </div>
                     </li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- Company -->
+        <section class="company">
+            <div class="container company-list">
+                <h2 class="our-customers">Customers</h2>
+                <ul class="list logo-company">
+                    <li class="icon-ya-co"></li>
+                    <li class="icon-tagline"></li>
+                    <li class="icon-company"></li>
+                    <li class="icon-foster-peters"></li>
+                    <li class="icon-brand"></li>
+                    <li class="icon-tagline-company"></li>
                 </ul>
             </div>
         </section>
