--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
 
                 <ul class="list card-set">
                     <li class="set-item">
-                        <a class="link" href="/">
+                        <a class="link link-item" href="/">
                             <img src="./images/portfolio/Bankingapp.jpg" alt="Banking App" width="360">
                             <div class="border">
                                 <h2 class="portfolio-item">Banking App Interface Concept</h2>
@@ -116,6 +116,7 @@
                                 <p class="row-contents">Web Site</p>
                             </div>
                         </a>
+                    </li>
                     <li class="set-item"><a class="link" href="/"><img src="./images/portfolio/Freshcoffee.jpg"
                                 alt="Fresh Coffee" width="360">
                             <div class="border">
@@ -131,6 +132,41 @@
     <!-- footer -->
     <footer class="footer-list">
         <div class="container">
+            <h2 class="social-item">Social</h2>
+            <ul class="list footer-social">
+                <li>
+                    <a class="social-link-footer" href="">
+                        <svg width="24" height="24">
+                            <use href="./images/icon/Social/svg-sprite.svg#icon-instagram-2">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="social-link-footer" href="">
+                        <svg width="24" height="24">
+                            <use href="./images/icon/Social/svg-sprite.svg#icon-twitter-1">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="social-link-footer" href="">
+                        <svg width="24" height="24">
+                            <use href="./images/icon/Social/svg-sprite.svg#icon-facebook-1">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="social-link-footer" href="">
+                        <svg width="24" height="24">
+                            <use href="./images/icon/Social/svg-sprite.svg#icon-linkedin-1">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
             <a class="link web-color logo" href="./index.html">Web<span class="link studio-color-item">Studio</span></a>
             <p class="footer-content">Increase the flow of customers and sales for your business with digital
                 marketing
