--- a/index.html
+++ b/index.html
@@ -55,25 +55,50 @@
             <div class="container">
                 <h2 class="title visualli-hidden">Our principles</h2>
                 <ul class="list princ-list">
-                    <li class="set-principle icon-antenna">
+                    <li class="set-principle">
+                        <ul>
+                            <li class="icon"><svg width="60" height="64">
+                                    <use href="./images/icon/svg-sprite2.svg#icon-antenna"></use>
+                                </svg></li>
+                        </ul>
+
                         <h3 class="principles-item">Strategy</h3>
                         <p class="principles-list">Our goal is to identify the business
                             problem to walk away with the perfect and creative solution.</p>
+
                     </li>
-                    <li class="set-principle icon-clock">
+                    <li class="set-principle">
+                        <ul>
+                            <li class="icon"><svg width="60" height="64">
+                                    <use href="./images/icon/svg-sprite2.svg#icon-clock"></use>
+                                </svg></li>
+                        </ul>
+
                         <h3 class="principles-item">Punctuality</h3>
                         <p class="principles-list">Bring the key message to the brand's audience for the best price
                             within
                             the shortest possible
                             time.</p>
                     </li>
-                    <li class="set-principle icon-vector">
+                    <li class="set-principle">
+                        <ul>
+                            <li class="icon"><svg width="60" height="64">
+                                    <use href="./images/icon/svg-sprite2.svg#icon-Vector"></use>
+                                </svg></li>
+                        </ul>
+
                         <h3 class="principles-item">Diligence</h3>
                         <p class="principles-list">Research and confirm brands that present the strongest digital growth
                             opportunities and minimize
                             risk.</p>
                     </li>
-                    <li class="set-principle icon-astronaut">
+                    <li class="set-principle">
+                        <ul>
+                            <li class="icon"><svg width="65" height="64">
+                                    <use href="./images/icon/svg-sprite2.svg#icon-astronaut"></use>
+                                </svg></li>
+                        </ul>
+
                         <h3 class="principles-item">Technologies</h3>
                         <p class="principles-list">Design practice focused on digital experiences. We bring forth a deep
                             passion for
@@ -106,17 +131,33 @@
                             <p class="team-position">Product Designer</p>
                             <ul class="social list">
                                 <li>
-                                    <a href="">
-                                        <svg width="40" height="40">
-                                            <use href="./images/icon/Social-media/symbol-defs2.svg#icon-instagram">
+                                    <a class="social-link" href="">
+                                        <svg width="16" height="16">
+                                            <use href="./images/icon/Social/svg-sprite.svg#icon-instagram-2">
                                             </use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="">
-                                        <svg width="40" height="40">
-                                            <use href="./images/icon/Social-media/symbol-defs2.svg#icon-instagram">
+                                    <a class="social-link" href="">
+                                        <svg width="16" height="16">
+                                            <use href="./images/icon/Social/svg-sprite.svg#icon-twitter-1">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="social-link" href="">
+                                        <svg width="16" height="16">
+                                            <use href="./images/icon/Social/svg-sprite.svg#icon-facebook-1">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="social-link" href="">
+                                        <svg width="16" height="16">
+                                            <use href="./images/icon/Social/svg-sprite.svg#icon-linkedin-1">
                                             </use>
                                         </svg>
                                     </a>
@@ -129,6 +170,40 @@
                         <div class="tem-cards">
                             <h3 class="people-names">Tom Ford</h3>
                             <p class="team-position">Frontend Developer</p>
+                            <ul class="social list">
+                                <li>
+                                    <a class="social-link" href="">
+                                        <svg width="16" height="16">
+                                            <use href="./images/icon/Social/svg-sprite.svg#icon-instagram-2">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="social-link" href="">
+                                        <svg width="16" height="16">
+                                            <use href="./images/icon/Social/svg-sprite.svg#icon-twitter-1">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="social-link" href="">
+                                        <svg width="16" height="16">
+                                            <use href="./images/icon/Social/svg-sprite.svg#icon-facebook-1">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="social-link" href="">
+                                        <svg width="16" height="16">
+                                            <use href="./images/icon/Social/svg-sprite.svg#icon-linkedin-1">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="color-team-item">
@@ -136,6 +211,40 @@
                         <div class="tem-cards">
                             <h3 class="people-names">Camila Garcia</h3>
                             <p class="team-position">Marketing</p>
+                            <ul class="social list">
+                                <li>
+                                    <a class="social-link" href="">
+                                        <svg width="16" height="16">
+                                            <use href="./images/icon/Social/svg-sprite.svg#icon-instagram-2">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="social-link" href="">
+                                        <svg width="16" height="16">
+                                            <use href="./images/icon/Social/svg-sprite.svg#icon-twitter-1">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="social-link" href="">
+                                        <svg width="16" height="16">
+                                            <use href="./images/icon/Social/svg-sprite.svg#icon-facebook-1">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="social-link" href="">
+                                        <svg width="16" height="16">
+                                            <use href="./images/icon/Social/svg-sprite.svg#icon-linkedin-1">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="color-team-item">
@@ -143,6 +252,40 @@
                         <div class="tem-cards">
                             <h3 class="people-names">Daniel Wilson</h3>
                             <p class="team-position">UI Designer</p>
+                            <ul class="social list">
+                                <li>
+                                    <a class="social-link" href="">
+                                        <svg width="16" height="16">
+                                            <use href="./images/icon/Social/svg-sprite.svg#icon-instagram-2">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="social-link" href="">
+                                        <svg width="16" height="16">
+                                            <use href="./images/icon/Social/svg-sprite.svg#icon-twitter-1">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="social-link" href="">
+                                        <svg width="16" height="16">
+                                            <use href="./images/icon/Social/svg-sprite.svg#icon-facebook-1">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="social-link" href="">
+                                        <svg width="16" height="16">
+                                            <use href="./images/icon/Social/svg-sprite.svg#icon-linkedin-1">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
@@ -153,14 +296,28 @@
         <section class="company">
             <div class="container company-list">
                 <h2 class="our-customers">Customers</h2>
-                <ul class="list logo-company">
-                    <li class="icon-ya-co"></li>
-                    <li class="icon-tagline"></li>
-                    <li class="icon-company"></li>
-                    <li class="icon-foster-peters"></li>
-                    <li class="icon-brand"></li>
-                    <li class="icon-tagline-company"></li>
-                </ul>
+                <div>
+                    <ul class="list title-company">
+                        <li class="icon-company"><svg width="60" height="64">
+                                <use class="icon-hover" href="./images/icon/svg-sprite2.svg#icon-yaco"></use>
+                            </svg></li>
+                        <li class="icon-company"><svg width="60" height="64">
+                                <use href="./images/icon/svg-sprite2.svg#icon-tagline-here"></use>
+                            </svg></li>
+                        <li class="icon-company"><svg width="60" height="64">
+                                <use href="./images/icon/svg-sprite2.svg#icon-Logo-company"></use>
+                            </svg></li>
+                        <li class="icon-company"><svg width="60" height="64">
+                                <use href="./images/icon/svg-sprite2.svg#icon-foster-peters"></use>
+                            </svg></li>
+                        <li class="icon-company"><svg width="60" height="64">
+                                <use href="./images/icon/svg-sprite2.svg#icon-brand"></use>
+                            </svg></li>
+                        <li class="icon-company"><svg width="60" height="64">
+                                <use href="./images/icon/svg-sprite2.svg#icon-tagline-company"></use>
+                            </svg></li>
+                    </ul>
+                </div>
             </div>
         </section>
     </main>
@@ -169,13 +326,49 @@
 
     <footer class="footer-list">
         <div class="container">
+            <h2 class="social-item">Social</h2>
+            <ul class="list footer-social">
+                <li>
+                    <a class="social-link-footer" href="">
+                        <svg width="24" height="24">
+                            <use href="./images/icon/Social/svg-sprite.svg#icon-instagram-2">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="social-link-footer" href="">
+                        <svg width="24" height="24">
+                            <use href="./images/icon/Social/svg-sprite.svg#icon-twitter-1">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="social-link-footer" href="">
+                        <svg width="24" height="24">
+                            <use href="./images/icon/Social/svg-sprite.svg#icon-facebook-1">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a class="social-link-footer" href="">
+                        <svg width="24" height="24">
+                            <use href="./images/icon/Social/svg-sprite.svg#icon-linkedin-1">
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
             <a class="link web-color logo" href="./index.html">Web<span class="link studio-color-item">Studio</span></a>
             <p class="footer-content">Increase the flow of customers and sales for your business with digital
                 marketing
                 &
                 growth solutions.</p>
+
         </div>
     </footer>
-
+</body>
 
 </html>
