--- a/index.html
+++ b/index.html
@@ -326,41 +326,43 @@
 
     <footer class="footer-list">
         <div class="container">
-            <h2 class="social-item">Social</h2>
-            <ul class="list footer-social">
-                <li>
-                    <a class="social-link-footer" href="">
-                        <svg width="24" height="24">
-                            <use href="./images/icon/Social/svg-sprite.svg#icon-instagram-2">
-                            </use>
-                        </svg>
-                    </a>
-                </li>
-                <li>
-                    <a class="social-link-footer" href="">
-                        <svg width="24" height="24">
-                            <use href="./images/icon/Social/svg-sprite.svg#icon-twitter-1">
-                            </use>
-                        </svg>
-                    </a>
-                </li>
-                <li>
-                    <a class="social-link-footer" href="">
-                        <svg width="24" height="24">
-                            <use href="./images/icon/Social/svg-sprite.svg#icon-facebook-1">
-                            </use>
-                        </svg>
-                    </a>
-                </li>
-                <li>
-                    <a class="social-link-footer" href="">
-                        <svg width="24" height="24">
-                            <use href="./images/icon/Social/svg-sprite.svg#icon-linkedin-1">
-                            </use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
+            <div class="social-container">
+                <h2 class="social-item">Social</h2>
+                <ul class="list footer-social">
+                    <li>
+                        <a class="social-link-footer" href="">
+                            <svg width="24" height="24">
+                                <use href="./images/icon/Social/svg-sprite.svg#icon-instagram-2">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="social-link-footer" href="">
+                            <svg width="24" height="24">
+                                <use href="./images/icon/Social/svg-sprite.svg#icon-twitter-1">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="social-link-footer" href="">
+                            <svg width="24" height="24">
+                                <use href="./images/icon/Social/svg-sprite.svg#icon-facebook-1">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="social-link-footer" href="">
+                            <svg width="24" height="24">
+                                <use href="./images/icon/Social/svg-sprite.svg#icon-linkedin-1">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
             <a class="link web-color logo" href="./index.html">Web<span class="link studio-color-item">Studio</span></a>
             <p class="footer-content">Increase the flow of customers and sales for your business with digital
                 marketing
