--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 <ul class="list princ-list">
                     <li class="set-principle">
 
-                        <div class="icon"><svg width="60" height="64">
-                                <use href="./images/icon/icons.svg#icon-antenna"></use>
+                        <div class="icon"><svg width="64" height="64">
+                                <use href="./images/icons.svg#icon-antenna"></use>
                             </svg></div>
 
 
@@ -69,8 +69,8 @@
                     </li>
                     <li class="set-principle">
 
-                        <div class="icon"><svg width="60" height="64">
-                                <use href="./images/icon/icons.svg#icon-clock"></use>
+                        <div class="icon"><svg width="64" height="64">
+                                <use href="./images/icons.svg#icon-clock"></use>
                             </svg></div>
 
 
@@ -82,8 +82,8 @@
                     </li>
                     <li class="set-principle">
 
-                        <div class="icon"><svg width="60" height="64">
-                                <use href="./images/icon/icons.svg#icon-Vector"></use>
+                        <div class="icon"><svg width="64" height="64">
+                                <use href="./images/icons.svg#icon-Vector"></use>
                             </svg></div>
 
 
@@ -94,8 +94,8 @@
                     </li>
                     <li class="set-principle">
 
-                        <div class="icon"><svg width="65" height="64">
-                                <use href="./images/icon/icons.svg#icon-astronaut"></use>
+                        <div class="icon"><svg width="64" height="64">
+                                <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg></div>
 
 
@@ -300,37 +300,37 @@
                     <ul class="list title-company">
                         <li class="icon-company"><a class="icon-link" href=""><svg class="icon-svg-company" width="104"
                                     height="56">
-                                    <use class="icon-hover" href="./images/icon/icons.svg#icon-yaco"></use>
+                                    <use class="icon-hover" href="./images/icons.svg#icon-yaco"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icon-company"><a class="icon-link" href=""><svg class="icon-svg-company" width="104"
                                     height="56">
-                                    <use href="./images/icon/icons.svg#icon-tagline-here"></use>
+                                    <use href="./images/icons.svg#icon-tagline-here"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icon-company"><a class="icon-link" href=""><svg class="icon-svg-company" width="104"
                                     height="56">
-                                    <use href="./images/icon/icons.svg#icon-Logo-company"></use>
+                                    <use href="./images/icons.svg#icon-Logo-company"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icon-company"><a class="icon-link" href=""><svg class="icon-svg-company" width="104"
                                     height="56">
-                                    <use href="./images/icon/icons.svg#icon-foster-peters"></use>
+                                    <use href="./images/icons.svg#icon-foster-peters"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icon-company"><a class="icon-link" href=""><svg class="icon-svg-company" width="104"
                                     height="56">
-                                    <use href="./images/icon/icons.svg#icon-brand"></use>
+                                    <use href="./images/icons.svg#icon-brand"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="icon-company"><a class="icon-link" href=""><svg class="icon-svg-company" width="104"
                                     height="56">
-                                    <use href="./images/icon/icons.svg#icon-tagline-company"></use>
+                                    <use href="./images/icons.svg#icon-tagline-company"></use>
                                 </svg>
                             </a>
                         </li>
