--- a/index.html
+++ b/index.html
@@ -296,46 +296,52 @@
         <section class="company">
             <div class="container company-list">
                 <h2 class="our-customers">Customers</h2>
-                <div>
-                    <ul class="list title-company">
-                        <li class="icon-company"><a class="icon-link" href=""><svg class="icon-svg-company" width="104"
-                                    height="56">
-                                    <use class="icon-hover" href="./images/icons.svg#icon-yaco"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="icon-company"><a class="icon-link" href=""><svg class="icon-svg-company" width="104"
-                                    height="56">
-                                    <use href="./images/icons.svg#icon-tagline-here"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="icon-company"><a class="icon-link" href=""><svg class="icon-svg-company" width="104"
-                                    height="56">
-                                    <use href="./images/icons.svg#icon-Logo-company"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="icon-company"><a class="icon-link" href=""><svg class="icon-svg-company" width="104"
-                                    height="56">
-                                    <use href="./images/icons.svg#icon-foster-peters"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="icon-company"><a class="icon-link" href=""><svg class="icon-svg-company" width="104"
-                                    height="56">
-                                    <use href="./images/icons.svg#icon-brand"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="icon-company"><a class="icon-link" href=""><svg class="icon-svg-company" width="104"
-                                    height="56">
-                                    <use href="./images/icons.svg#icon-tagline-company"></use>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+
+                <ul class="list title-company">
+                    <li class="icon-company">
+                        <a class="icon-link" href="">
+                            <svg class="icon-svg-company" width="104" height="56">
+                                <use class="icon-hover" href="./images/icons.svg#icon-yaco"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icon-company">
+                        <a class="icon-link" href="">
+                            <svg class="icon-svg-company" width="104" height="56">
+                                <use href="./images/icons.svg#icon-tagline-here"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icon-company">
+                        <a class="icon-link" href="">
+                            <svg class="icon-svg-company" width="104" height="56">
+                                <use href="./images/icons.svg#icon-Logo-company"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icon-company">
+                        <a class="icon-link" href="">
+                            <svg class="icon-svg-company" width="104" height="56">
+                                <use href="./images/icons.svg#icon-foster-peters"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icon-company">
+                        <a class="icon-link" href="">
+                            <svg class="icon-svg-company" width="104" height="56">
+                                <use href="./images/icons.svg#icon-brand"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="icon-company">
+                        <a class="icon-link" href="">
+                            <svg class="icon-svg-company" width="104" height="56">
+                                <use href="./images/icons.svg#icon-tagline-company"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+
             </div>
         </section>
     </main>
